# docker-rest-seed

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  docker-compose.yml  setup.sh
backend/src/rest/: Http.cpp
include/: RestController.h  Server.h  Session.h
include/compare/: Diff.h  Levenshtein.h  LongestCommonSubsequence.h
include/rest/: Http.h  RestController.h  Server.h  Session.h
src/: RestController.cpp  Server.cpp  Session.cpp  main.cpp  server.cpp
src/compare/: Diff.cpp  Levenshtein.cpp  LongestCommonSubsequence.cpp
src/rest/: RestController.cpp  Server.cpp  Session.cpp
src_other_files/: BasicServer.cpp  PersistentSession.cpp  ServerImprovements1.cpp  ServerImprovements2.cpp  SessionServer.cpp  TimeoutSession.cpp
ui/: index.html  script.js  styles.css
ui/compare/: index.html  scripts.js  styles.css
